--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.html",
   "scripts": {
     "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "node-sass": "^8.0.0",
+    "sass": "^1.63.6"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
