--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
-    "start": "npm run lite",
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
+    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\"",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1",
     "node-sass": "^8.0.0",
+    "onchange": "^7.0.0",
+    "parallelshell": "3.0.1",
     "sass": "^1.63.6"
   },
   "dependencies": {
